--- a/style.css
+++ b/style.css
@@ -79,12 +79,12 @@ body {
     top: 45%; /* موقعیت عمودی مرکز */
     left: 50%; /* موقعیت افقی مرکز */
     transform: translate(-50%, 50%); /* شروع حرکت از پایین */
-    text-align: right;
+    text-align:center;
     font-size: 1.5rem;
     background-color: rgba(255, 255, 255, 0.6); /* نیمه شفاف برای زمینه */
     padding: 10px;
     border-radius: 10px; /* گرد کردن گوشه‌ها */
-    font-family: 'IranNastaliq', sans-serif !important; /* فونت مناسب */
+    font-family: 'IranNastaliq', !important; /* فونت مناسب */
     opacity: 0; /* شروع با شفافیت صفر */
     filter: blur(10px); /* شروع با حالت تار */
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, filter 0.5s ease-in-out;
@@ -93,18 +93,18 @@ body {
     align-items: flex-end; /* تراز سمت چپ */
 }
 
-.text-overlay .date {
-    align-self: flex-end; /* تاریخ از سمت راست تراز می‌شود */
-}
 
 .text-overlay.animate {
     animation: slideUpWithFilter 2s forwards; /* انیمیشن حرکت به بالا */
 }
 
+.text-overlay .date {
+    align-self: flex-end; /* تاریخ از سمت راست تراز می‌شود */
+}
 @keyframes slideUpWithFilter {
     0% {
         opacity: 0; /* شروع با شفافیت صفر */
-        transform: translate(-50%, 50%); /* شروع از پایین */
+        transform: translate(50%, 0); /* شروع از سمت راست */
         filter: blur(10px); /* شروع با تاری */
     }
     100% {
@@ -140,8 +140,9 @@ body {
     color: #333; /* رنگ متن */
 }
 .event-time > span , .dinner , .separator{
-    font-size: 1.3rem !important;
-    font-family: "BTraffiBold_0";
+    font-size: 0.9rem !important;
+   font-family: 'BTraffiBold_0';
+    direction: rtl;
 font-weight: bold;
 }
 .start-time,
@@ -194,6 +195,7 @@ display: none !important;
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+    padding-right: 0.8rem;
     animation: subtleMove 10s ease-in-out infinite; /* انیمیشن با حرکت ریز و تکرارشونده */
 }
 .myslider__4{
@@ -612,7 +614,6 @@ img {
     }
     .separator, .dinner{
         font-size: 20px;
-        font-family: 'IranNastaliq', sans-serif !important;
         
     }
 
