--- a/style.css
+++ b/style.css
@@ -129,8 +129,9 @@ body {
 .event-time {
     font-size: 2.5rem;
     margin-top: -2rem ;
-    padding-top: 1rem;
+    padding-top: 2rem;
     display: flex;
+    /* line-height: 2; */
     flex-direction: row-reverse;
     justify-content: center;
     font-family: 'IranNastaliq', sans-serif !important;
