--- a/style.css
+++ b/style.css
@@ -27,12 +27,13 @@ body {
     max-width: 1000px;
     position: relative;
     user-select: none;     
-    margin: 0; /* حذف مارجین */
+    margin: auto; /* حذف مارجین */
 }
 
 .swiper {
     width: 100%;
     height: 100vh; /* تغییر به 100vh */
+
 }
 
 
@@ -621,5 +622,11 @@ img {
     .start-time,
     .end-time {
         font-size: 1.5rem; /* سایز فونت شروع و پایان کمتر */
+    }
+}
+@media(max-width: 878px){
+    .span_top,
+    .pan_top_down{
+        font-size: 4rem !important;
     }
 }
