--- a/style.css
+++ b/style.css
@@ -18,6 +18,47 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* loader */
+    /* استایل‌های مربوط به لودر */
+    #loader {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+    }
+
+    .spinner {
+        border: 8px solid rgba(255, 255, 255, 0.3);
+        border-top: 8px solid #fff;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    /* نمایش محتوا فقط بعد از لود کامل */
+    body {
+        visibility: hidden;
+    }
+
+    body.loaded {
+        visibility: visible;
+    }
 
 body {
     height: 100vh;
@@ -316,7 +357,6 @@ body {
     padding-bottom: 1rem;
 }
 .modal-button {
-    font-family: 'IranNastaliq', !important;
     background-color: #007bff;
     color: white;
     padding: 8px 20px;
