--- a/style.css
+++ b/style.css
@@ -656,7 +656,7 @@ img {
     font-size: 1.3rem;
     vertical-align: middle;
     color: #34495e;
-    margin-top: 3rem !important;
+    /* margin-top: 3rem !important; */
     animation-fill-mode: forwards;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, filter 0.5s ease-in-out;
 }
