--- a/style.css
+++ b/style.css
@@ -390,7 +390,15 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
-
+.bg_img{
+    background-size: cover;
+    background-image: url("image/bride.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    animation: windMove 10s ease-in-out infinite;   
+}
 
 .myslider__slideer__3 {
     /* background-image: url("image/main__s_3.jpg"); */
