--- a/style.css
+++ b/style.css
@@ -397,7 +397,6 @@ body {
     background-position: center;
     width: 100%;
     height: 100vh;
-    animation: windMove 10s ease-in-out infinite;   
 }
 
 .myslider__slideer__3 {
@@ -512,6 +511,7 @@ body {
 .container {
     text-align: center;
     width: 100%;
+    background-color: #FFF !important;
 }
 
 .slide-content {
