--- a/style.css
+++ b/style.css
@@ -798,7 +798,7 @@ img {
     height: 50vh;
     background-size: cover;
     bottom: 0;
-    left: 0;
+    left: 1%;
     object-fit: cover;
     opacity: 0;
     animation: moveUpFirst 2s ease-in-out 0s forwards, rotateLeftRight 4s ease-in-out 2s infinite;
