--- a/style.css
+++ b/style.css
@@ -400,10 +400,10 @@ body {
 }
 
 .myslider__slideer__3 {
-    /* background-image: url("image/main__s_3.jpg"); */
+    background-image: url("image/move\).jpg");
     background-size: cover;
-    background-image: url("image/move).jpg");
     background-repeat: no-repeat;
+    /* margin-top: 10rem; */
     width: 100%;
     height: 100vh;
     animation: windMove 10s ease-in-out infinite;
